# Cubit-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  CubitVersionCompatibility.hpp  DamselUtil.cpp  DamselUtil.hpp  ExoIIUtil.cpp  ExoIIUtil.hpp  FileTokenizer.cpp  FileTokenizer.hpp  GmshUtil.cpp  GmshUtil.hpp  HDF5Common.hpp  IODebugTrack.cpp  IODebugTrack.hpp  LICENSE  Makefile.am  MyPlugin.hpp  NCHelper.cpp  NCHelper.hpp  NCHelperEuler.cpp  NCHelperEuler.hpp  NCHelperFV.cpp  NCHelperFV.hpp  NCHelperGCRM.cpp  NCHelperGCRM.hpp  NCHelperHOMME.cpp  NCHelperHOMME.hpp  NCHelperMPAS.cpp  NCHelperMPAS.hpp  NCWriteEuler.cpp  NCWriteEuler.hpp  NCWriteFV.cpp  NCWriteFV.hpp  NCWriteGCRM.cpp  NCWriteGCRM.hpp  NCWriteHOMME.cpp  NCWriteHOMME.hpp  NCWriteHelper.cpp  NCWriteHelper.hpp  (+89 more)
.github/workflows/: 21.04.yml  ci.yml  linux.yml  linux_cubit.yml  linux_debian.yml  linux_ubuntu.yml  mac.yml  main.yml  unix.yml  unix_linux.yml  unix_mac.yml  windows.yml
examples/CommandPlugin/: CMakeLists.txt  MyExportCommand.cpp  MyExportCommand.hpp  MyPlugin.cpp  MyVersionCommand.cpp  MyVersionCommand.hpp
examples/Component/: CMakeLists.txt  MyComp.cpp  MyComp.hpp  MyNavigation.xml  PanelManager.cpp  ToolbarManager.cpp  mycomp.i
examples/Component/EventObservers/: CMakeLists.txt  MyObserver.cpp  MyObserver.hpp
examples/Component/GUI/: CMakeLists.txt  MyPanel1.cpp
export_dagmc_cmd/: CMakeLists.txt  DAGMCExportCommand.cpp  DAGMCExportCommand.hpp  MCNPImp.cpp  MCNPImp.hpp  MyPlugin.cpp  README.md  iGeom_funcs.cpp  iGeom_funcs.hpp  iGeom_test.cpp  iGeom_test.hpp  mcnp2cad.cpp  mcnp2cad.hpp  mcnp2cadex.cpp
export_dagmc_cmd/igeom/: CATag.hpp  iGeom.cpp  iGeom.h  iGeomError.cc  iGeomError.h
export_dagmc_cmd/mcnp2cad/: MCNPInput.cpp  geometry.cpp  geometry.hpp  iGeom.h  iGeomError.cc  mcnp2cad.cpp  volumes.cpp  volumes.hpp
export_dagmc_cmd/mcnp2cad/tests/: INP-lat1  INP-lat3
iGeom/: iGeom.cpp
iGeom/tests/: iGeom_test.cpp
import_mcnp_cmd/: MCNPImp.cpp  MCNPImp.hpp
mhdf/: CMakeLists.txt  Makefile.am
mhdf/example/: hexes_to_gmsh.c  info.c  validate.c
mhdf/include/: mhdf.h
mhdf/src/: adjacency.c  connectivity.c  file-desc.c  file-handle.c  file-handle.h  file.c  names-and-paths.h  nodes.c  sets.c  status.c  status.h  tags.c  util.c  util.h
moab/: ExoIIInterface.hpp
script/: CubitExport-release.cmake  build_plug_linux.sh  build_plugin.sh  build_plugin_macos.sh  build_windows.sh  linux_share_build.sh
scripts/: CubitExport-release.cmake.diff  CubitGeomConfig.cmake  CubitGeomConfig.cmake.diff  README.md  build_plug_linux.sh  build_plugin_docker_ubuntu.sh  build_plugin_linux.sh  build_plugin_macos.sh  build_windows.sh  linux_share_build.sh  mac_share_build.sh  unix_share_build.sh
setup_scripts/: apt_setup.sh  dagmc_setup.sh  install_dir.sh  make_tarball.sh  moab_setup.sh  trelis_setup.sh  windows.md
test_plugin/: .gitignore  README.md  test.i  test.jou  test.sh
